fix carousel changing bug on mobile view

--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -14,6 +14,7 @@
     box-shadow: 0 0 7px #666;
     width: 100%;
     height: 100%;
+    object-fit: fill;
 }
 
 .slide-arrow {
@@ -67,8 +68,8 @@
 
 @media screen and (max-width: 600px){
     .carousel{
-        width: 80%;
-        height: 50%;
+        width: 80vw;
+        height: 250px;
     }
     .slide-arrow {
         height: 1.5rem;
